test/fail/bin_punc06.v3
//@parse = ParseError
class bin_punc01 {
	var c: int = 0b0011.0;
}
